# riff

./: .gitignore  ARTISTS  AUTHORS  Cargo.toml  Justfile  README.md  RELEASE.md  TRANSLATORS  cargo-sources.json  dev.alextren.Spot.snapshots.json  dev.diegovsky.Riff.development.json  dev.diegovsky.Riff.snapshots.json  meson.build
.cargo/: config.toml
.claude-flow/metrics/: system-metrics.json
.github.bak/ISSUE_TEMPLATE/: bug_report.md
.github.bak/workflows/: spot-development.yml  spot-quality.yml  spot-snapshots.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  riff-snapshots.yml  spot-development.yml.bak  spot-snapshots.yml
.helix/: languages.toml
build-aux/: flatpak-cargo-generator.py
data/: dev.alextren.Spot.appdata.xml  dev.alextren.Spot.desktop  dev.diegovsky.Riff.appdata.xml  dev.diegovsky.Riff.desktop  dev.diegovsky.Riff.gschema.xml  dev.diegovsky.Riff.metainfo.xml  gschemas.compiled  meson.build
doc/: doc.tex  enter.sh
po/: LINGUAS  ar.po  bg.po  bn.po  ca.po  cs.po  de.po  el.po  en.po  es.po  et.po  eu.po  fi.po  fr.po  ia.po  id.po  it.po  ja.po  meson.build  nb.po  nl.po  pl.po  pt-br.po  pt.po  ru.po  sl.po  spot.pot  tr.po  uk.po
src/: feature_flags.rs  hotfix.rs  main.rs  meson.build  riff.gresource.xml  settings.rs  spot.gresource.xml  window.blp
src/api/: api_models.rs  cache.rs  cached_client.rs  client.rs  mod.rs  oauth2.rs
src/app/: batch_loader.rs  credentials.rs  dispatch.rs  list_store.rs  loader.rs  mod.rs
src/app/components/: labels.rs  mod.rs  player_notifier.rs  utils.rs
src/app/models/: album_model.rs  artist_model.rs  main.rs
src/app/state/: app_model.rs  app_state.rs  browser_state.rs  login_state.rs  mod.rs  playback_state.rs  screen_states.rs  settings_state.rs
src/connect/: player.rs
src/dbus/: listener.rs  mod.rs  mpris.rs
src/discord_rpc/: rpc.rs
src/player/: login.html  mod.rs  oauth2.rs  player.rs  token_store.rs
(+87 files in other folders)
